--- a/css/styles.css
+++ b/css/styles.css
@@ -221,44 +221,45 @@ a {
   height: 325vh;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 100%; }
 
-.soundcloud {
-  margin: 0 auto;
-  outline: 0;
-  padding: 12px 0 12px 0; }
+img {
+  max-height: 50%;
+  max-width: 50%; }
 
-.bandcampSection {
-  width: 50%;
-  flex-direction: row;
-  margin: 0 auto; }
-
-.bandcampLeft {
-  width: 20%;
-  outline: 0;
-  align-items: center;
+.artistCard1, .artistCard2, .artistCard3, .artistCard4 {
   justify-content: center;
-  padding: 12px 0 12px 0;
-  float: left;
+  align-items: center; }
+
+.artistCard1 {
+  width: 25%;
+  height: 15%;
+  align-content: center;
+  background-image: url("/assets/GAlogo-01.png");
+  background-size: 350px 300px;
+  background-repeat: no-repeat;
+  border: 1px solid red;
+  background-position: center; }
+
+.artistCard2 {
+  width: 80%;
+  height: 10%;
+  background-image: url("/assets/HialeahLogo.png");
+  background-size: auto;
+  background-repeat: no-repeat;
+  border: 1px solid red;
+  background-position: center; }
+
+.artistCard3 {
+  max-width: 20%;
+  max-height: 30%;
   margin: 0 auto; }
 
-.bandcampRight {
-  margin-right: 11rem;
-  width: 20%;
-  outline: 0;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 0 12px 0;
-  float: right;
-  padding-left: 28px;
+.artistCard4 {
+  max-width: 20%;
+  max-height: 35%;
   margin: 0 auto; }
-
-.bandcampHialeah {
-  margin: 0 auto;
-  width: 30%;
-  outline: 0;
-  align-items: center;
-  padding: 12px 0 12px 0; }
 
 .sideListServices {
   margin-top: 13rem; }
