--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -23,6 +23,10 @@ a:hover {
     color: rgba(169, 156, 215, 0.817);
 }
 
+i:hover {
+    color: rgba(169, 156, 215, 0.817);
+}
+
 a.serviceFont {
     font-size: 16.5px;
     margin-right: 5px;
